--- a/style.css
+++ b/style.css
@@ -1,36 +1,126 @@
-/* universal selector */
-*{
-    font-family: Roboto, sans-serif;
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+  }
+  
+header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 10px 120px;
+    background: rgb(100, 96, 96);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 100;
 }
 
-h1, p {
-    color: 	#FFFFFF;
-    font-family: Montserrat, sans-serif;
-   
+.logo {
+    width: 50px;  
+    border-radius: 50%;
 }
+
+nav a {
+    font-size: 18px;
+    color: white;
+    text-decoration: none;
+    font-weight: 500;
+    margin-left: 35px;
+}
+
+nav a:hover,
+nav a.active{
+    color: lightblue;
+
+}
+
+section {
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: lightgray;
+}
+
+section:nth-child(odd){
+    background: gray
+}
+
+p {
+    color: black;
+  }
+
 
 #profile {
-    height: 250px;
-    width: 250px;
+    height: 100px;
+    width: 100px;
     object-fit: cover;
+    margin-right: 100px;
 
     /* circle */
     border-radius: 50%;
 }
 
-body{
-    background-color: #ff9d00;
-background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg stroke='%23000' stroke-width='66.7' stroke-opacity='0.05' %3E%3Ccircle fill='%23ff9d00' cx='0' cy='0' r='1800'/%3E%3Ccircle fill='%23fb8d17' cx='0' cy='0' r='1700'/%3E%3Ccircle fill='%23f47d24' cx='0' cy='0' r='1600'/%3E%3Ccircle fill='%23ed6e2d' cx='0' cy='0' r='1500'/%3E%3Ccircle fill='%23e35f34' cx='0' cy='0' r='1400'/%3E%3Ccircle fill='%23d85239' cx='0' cy='0' r='1300'/%3E%3Ccircle fill='%23cc453e' cx='0' cy='0' r='1200'/%3E%3Ccircle fill='%23be3941' cx='0' cy='0' r='1100'/%3E%3Ccircle fill='%23b02f43' cx='0' cy='0' r='1000'/%3E%3Ccircle fill='%23a02644' cx='0' cy='0' r='900'/%3E%3Ccircle fill='%23901e44' cx='0' cy='0' r='800'/%3E%3Ccircle fill='%23801843' cx='0' cy='0' r='700'/%3E%3Ccircle fill='%236f1341' cx='0' cy='0' r='600'/%3E%3Ccircle fill='%235e0f3d' cx='0' cy='0' r='500'/%3E%3Ccircle fill='%234e0c38' cx='0' cy='0' r='400'/%3E%3Ccircle fill='%233e0933' cx='0' cy='0' r='300'/%3E%3Ccircle fill='%232e062c' cx='0' cy='0' r='200'/%3E%3Ccircle fill='%23210024' cx='0' cy='0' r='100'/%3E%3C/g%3E%3C/svg%3E");
-background-attachment: fixed;
-background-size: cover;
+.one {
+    margin: 8%;
+    margin-top: 13%;
 }
 
-#landing {
-    /* vh means view height */
-    height: 80vh;
+.one h1 {
+    font-size: 40px;
+    color: black;
+    margin-bottom: 10px;
+}
 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+span {
+    color: yellow;
+    text-shadow: 2px 2px 10px black;
+}
+.soc{
+    font-size: large;
+}
+
+.resume{
+    background: rgb(15, 15, 15);
+    border-radius: 10px;
+    text-decoration: none;
+    display: inline-block;
+    font-weight: bold;
+    margin: 30px 0;
+    padding: 10px 18px;
+    color: white;
+}
+
+.resume:hover{
+    background: darkblue;
+}
+
+.image img{
+    border-radius: 50%;
+    width: 50%;
+}
+
+/* .image {
+    width 45%
+    height 80%
+    position: absolute
+    bottom: 0
+    right: 100px
+ }
+ 
+ .image img{
+    height: 100%
+    position: abosulte
+    left: 50%
+    bottom: 0
+    transform: translateX(-50);
+    transition: bottom 1s, left 1s;
+ }
+ */
+
+footer {
+    background-color: rgb(30, 139, 235);
 }
